# xmobar-hs-nix

./: flake.nix  xmobar-rohit.cabal
src/: Main.hs
