cabal-version:   3.0
name:            xmobar-rohit
version:         0.1.0.0
license:         NONE
author:          Joe
maintainer:      joe@example.com
build-type:      Simple

common warnings
    ghc-options: -Wall -threaded
executable xmobar-rohit
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, xmobar
    hs-source-dirs:   src
    default-language: Haskell2010
